# hPong

./: LICENSE  README.md  hPong.cabal
app/: Graphics.hs  Main.hs
src/: Pair.hs  Pong.hs
test/: PairSpecs.hs  Spec.hs
